fixed alignment issue

--- a/CSS/general.css
+++ b/CSS/general.css
@@ -208,7 +208,7 @@ a {
 
 .mtgCard {
     margin-bottom: 80px;
-    z-index: 1;
+    z-index: 0;
     display: block;
     font-size: 24px;
 }
